--- a/sass/selectList.sass
+++ b/sass/selectList.sass
@@ -15,7 +15,7 @@
   position: absolute
   width: 120px
   visibility: hidden
-  z-index: 10
+  z-index: 90
 
 .selectList-list_open
   visibility: visible
